--- a/infos.html
+++ b/infos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -484,7 +484,8 @@
 
                         } finally {
                             if (isUserAtBottom) {
-                                scrollToBottom();
+                                    scrollToBottom();
+
                             } else {
                                 // stopper le mouvement de scroll en cours
                                 window.scrollTo({
