rafraichir position bouton

--- a/infos.html
+++ b/infos.html
@@ -234,7 +234,7 @@
 </head>
 <body>
 
-    <div onclick="refreshLocalisation()">Rafraichir ma position</div>
+    <div style="position: absolute; z-index: 999;" onclick="refreshLocalisation()">Rafraichir ma position</div>
     
     <main>
         <div class="reponse-conteneur">
