favicon et corrections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/layout.css">
-    <title>Weather for you 🌤</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <title>Weather for you</title>
 </head>
 <body>
 
