--- a/ville.html
+++ b/ville.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/ville.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather for you 🌤 - Ma Ville</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <title>Weather for you - Ma Ville</title>
 </head>
 <body>
 
@@ -485,6 +486,6 @@
         }
 
     </script>
-    <script src="./layout.js"></script>
+    <script src="./javascript/layout.js"></script>
 </body>
 </html>
