--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
         <div id="mobile-menu">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="#">La météo</a></li>
+                <li><a href="./page1.html">La météo</a></li>
                 <li><a href="ia.html">La ville</a></li>
             </ul>
             <div id="return">
