--- a/ville.html
+++ b/ville.html
@@ -22,7 +22,7 @@
                 </div>
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="#">La météo</a></li>
+                    <li><a href="./page1.html">La météo</a></li>
                     <li><a href="./ville.html">Ma ville</a></li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
         <div id="mobile-menu">
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
-                <li><a href="#">La météo</a></li>
+                <li><a href="./page1.html">La météo</a></li>
                 <li><a href="./ville.html">Ma ville</a></li>
                 <li><div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
             </ul>
