--- a/page1.html
+++ b/page1.html
@@ -4,45 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/page1.css">
+    <link rel="stylesheet" href="css/layout.css">
     <title>Weather for you 🌤</title>
 </head>
 <body>
 
     <header>
-        <nav id="desktop-menu">
+        <div id="navBar">
+            <nav id="desktop-menu">
+                <div>
+                    <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                    <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
+                </div>
+                <ul>
+                    <li><a href="./index.html">Accueil</a></li>
+                    <li><a href="./page1.html">La météo</a></li>
+                    <li><a href="./ville.html">Ma ville</a></li>
+                </ul>
+            </nav>
+            <div id="desktop-bar">
+                <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                <div id="mobile-menu-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-align-justify"><path d="M3 12h18"/><path d="M3 18h18"/><path d="M3 6h18"/></svg>
+                </div>
+            </div>
+        </div>
+        <div id="mobile-menu">
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./page1.html">La météo</a></li>
-                <li><a href="./infos.html">La ville</a></li>
-            </ul>
-        </nav>
-
-        <div id="mobile-menu-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-align-justify"><path d="M3 12h18"/><path d="M3 18h18"/><path d="M3 6h18"/></svg>
-        </div>
-
-        <div id="mobile-menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="./page1.html">La météo</a></li>
-                <li><a href="ia.html">La ville</a></li>
+                <li><a href="./ville.html">Ma ville</a></li>
+                <li><div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
             </ul>
             <div id="return">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
             </div>
         </div>
-
     </header>
 
     <main>
-        <h2 class="city">La ville</h2>
-        <div id="meteo-section-img">
-            <img src="img/soleil.png" alt="image d'un soleil">
-        </div>
-        <p><strong>Température : </strong></p>
-            <p class = "temp">20°C</p>
-        <p><strong>Humidité : </strong></p>
-            <p class="hum">3%</p>
+        <div class="main-wrapper">
+            <h2 class="city">La ville</h2>
+            <div id="meteo-section-img">
+                <img class="no-select" src="img/soleil.png" alt="image d'un soleil">
+            </div>
+            <p><strong>Température : </strong></p>
+                <p class = "temp">20°C</p>
+            <p><strong>Humidité : </strong></p>
+                <p class="hum">3%</p>
+            </div>
         </div>
     </main>
 
