--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div id="meteo-section-text">
                     <h2>la météo accessible&nbsp;👀</h2>
                     <p>Restez informé des conditions météorologiques en temps réel. Consultez les prévisions précises pour aujourd’hui et les jours à venir, où que vous soyez. Qu’il fasse soleil, qu’il pleuve ou que le vent souffle, notre service vous accompagne pour mieux planifier vos journées.</p>
-                    <a class="btn no-select" href="">Voir la météo<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
+                    <a class="btn no-select" href="./page1.html">Voir la météo<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
                 </div>
                 <div class="no-select" id="meteo-section-img">
                     <img src="img/meteo.png" alt="">
