--- a/page1.html
+++ b/page1.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <div class="main-wrapper">
+        <div id="main-wrapper">
             <h2 class="city">La ville</h2>
             <div id="meteo-section-img">
                 <img class="no-select" src="img/soleil.png" alt="image d'un soleil">
@@ -56,6 +56,7 @@
         </div>
     </main>
 
+    <script src="javascript/layout.js"></script>
     <script>
     
         const apiKey = "54ab11de1bb7acd090d2f9fc9ac734cb ";
