--- a/page1.html
+++ b/page1.html
@@ -64,11 +64,14 @@
             </div>
 
             <div class="ranger">
-                <p><strong>Température : </strong></p>
-                <span class="temp">20°C</span>
-            
-                <p><strong>Humidité : </strong></p>
-                <span class="hum">3%</span>
+                <p>
+                    <strong>Température : </strong>
+                    <span class="temp">20°C</span>
+                </p>
+                <p>
+                    <strong>Humidité : </strong>
+                    <span class="hum">3%</span>
+                </p>
             </div>
 
             </div>
